fix: allow missing period scores